--- a/8.Material_design/app/src/main/res/layout/activity_main.xml
+++ b/8.Material_design/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/layout">
 
 <Button
     android:layout_width="wrap_content"
@@ -12,6 +13,7 @@
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:text="Hello"
+    android:id="@+id/helloBtn"
     />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
