--- a/12.Retrofit/POST_Retrofit_Linking_Springboot/app/src/main/res/layout/activity_main.xml
+++ b/12.Retrofit/POST_Retrofit_Linking_Springboot/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,22 @@
         android:text="POST API"
         android:id="@+id/postBtn"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/postBtn"
+        android:text="GET API"
+        android:layout_marginTop="20dp"
+        android:id="@+id/getBtn"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/getBtn"
+        android:layout_marginTop="20dp"
+        android:text="Put"
+        android:id="@+id/putBtn"/>
+
 </RelativeLayout>
